@@ -491,6 +491,8 @@ Then open ~/.local/share/applications/spacefm.desktop in your editor and set the
     <a href="#designmode-designmenu-copy">How do I copy a plugin to another menu?</a><br>
     How do I create a new tab in the current folder?<br>
 	<blockquote>Right-click on any tab and select Tab Here (you can assign any key shortcut to this item using <a href="#designmode-designmenu-key">Design Mode</a>).</blockquote>
+    How do I make archives (tar.gz etc) open with an application?<br>
+	<blockquote>Right-click on any archive file and select Open|Archive Default|Open With App.</blockquote>
 </ul>
 
 
