@@ -9,6 +9,7 @@
     add double-click opens file search result #109
     fix vfs move dest symlink device determination
     abort copy/move remove incomplete file
+    move Sort submenu from Style to View submenu
 0.8.0   2012-09-14:
     fix horiz scroll on single-click mode auto-select #137
     deprecated keys in spacefm desktop files #136
